--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.11.3+16
   pull_to_refresh: ^1.1.5
+  flutter_webview_plugin: ^0.2.1
 
 dev_dependencies:
   flutter_test:
