--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   http: ^0.11.3+16
   pull_to_refresh: ^1.1.5
   flutter_webview_plugin: ^0.2.1
+  webfeed: ^0.2.1
 
 dev_dependencies:
   flutter_test:
