--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_webview_plugin: ^0.2.1
   webfeed: ^0.2.1
   sqflite: any
+  path_provider: any
 
 dev_dependencies:
   flutter_test:
