global key, progress hud

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   webfeed: ^0.2.1
   sqflite: any
   path_provider: any
+  progress_hud: 1.1.0
 
 dev_dependencies:
   flutter_test:
