--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,12 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.12.0+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -40,8 +41,11 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
+
+  # To add assets to your application, add an assets section, like this:k mbni=
+  # assets:       
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
